--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>This is Git</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam eius temporibus quasi nesciunt
-            nostrum quaerat eaque doloremque incidunt ipsam ad quas minus illo voluptas, expedita accusantium, sapiente
+            nostrum quaerat eaque doloream ad quas minus illo voluptas, expedita accusantium, sapiente
             delectus consectetur atque. Doloribus sit quae, debitis in exercitationem aliquid tenetur recusandae
             officia, voluptates rerum fuga minus facilis non sunt provident soluta id hic ex ipsam illo ducimus est
             numquam. Obcaecati asperiores porro dignissimos. Dolor dolorem ducimus, voluptates ab vitae dolore. Nesciunt
@@ -23,7 +23,7 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam eius temporibus quasi nesciunt
             nostrum quaerat eaque doloremque incidunt ipsam ad quas minus illo voluptas, expedita accusantium, sapiente
-            delectus consectetur atque. Doloribus sit quae, debitis in exercitationem aliquid tenetur recusandae
+            delectus consectloribus sit quae, debitis in exercitationem aliquid tenetur recusandae
             officia, voluptates rerum fuga minus facilis non sunt provident soluta id hic ex ipsam illo ducimus est
             numquam. Obcaecati asperiores porro dignissimos. Dolor dolorem ducimus, voluptates ab vitae dolore. Nesciunt
             sit error mollitia! Dicta quis hic eveniet provident repellendus commodi tempora ullam laborum laudantium
